--- a/projectMentalHealth/MentalHealthApp/templates/result.html
+++ b/projectMentalHealth/MentalHealthApp/templates/result.html
@@ -8,12 +8,19 @@
 </head>
 
 <body>
-    <p>Depression Score {{result.depression_score}}</p><br>
-    <p>Anxiety Score {{result.anxiety_score}}</p><br>
-    <p>Productivity Score {{result.productivity_score}}</p><br>
-    <p>RISK {{result.risk_score}}</p><br>
-    <a href="/">Back</a>
-
+    <div>
+        <center>
+            <h3>Depression Score {{result.depression_score}}</h3>
+            <h3>Anxiety Score {{result.anxiety_score}}</h3>
+            <h3>Productivity Score {{result.productivity_score}}</h3><br>
+            <h3>RISK {{result.risk_score}}</h3> <br><br><br>
+        </center>
+    </div>
+    <footer>
+        <center>
+            <a href="/">Back</a>
+        </center>
+    </footer>
 </body>
 
 </html>
