--- a/projectMentalHealth/MentalHealthApp/templates/result.html
+++ b/projectMentalHealth/MentalHealthApp/templates/result.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,17 +6,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RISK</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
 </head>
 
 <body>
-    <div>
+    <div id="output_div">
         <center>
             <h3>Depression Score {{result.depression_score}}</h3>
             <h3>Anxiety Score {{result.anxiety_score}}</h3>
             <h3>Productivity Score {{result.productivity_score}}</h3><br>
-            <h3>RISK {{result.risk_score}}</h3> <br><br><br>
+            <h1>RISK : {% if result.risk_score == 2 %}
+                High2
+                {% elif result.risk_score == 0 %}
+                Low0
+                {% else %}
+                Medium1
+                {% endif %}</h1>
+            <br><br><br>
+
+
         </center>
     </div>
+    <hr>
     <footer>
         <center>
             <a href="/">Back</a>
